tests/baselines/reference/namespaceImportTypeQuery.errors.txt
/b.ts(8,3): error TS2353: Object literal may only specify known properties, and 'A' does not exist in type 'typeof import("/a")'.


==== /a.ts (0 errors) ====
    class A {}
    export type { A };
    export class B {};
    
==== /b.ts (1 errors) ====
    import * as types from './a';
    let A: typeof types.A;
    let B: typeof types.B;
    
    let t: typeof types = {
      // error: while you can ask for `typeof types.A`,
      // `typeof types` does not include `A`
      A: undefined as any,
      ~
!!! error TS2353: Object literal may only specify known properties, and 'A' does not exist in type 'typeof import("/a")'.
      B: undefined as any,
    }
    